SVY-11257 fix header no wrap

--- a/table/table.css
+++ b/table/table.css
@@ -56,6 +56,7 @@
 
 .tablewrapper thead th {
 	display: inline-block;
+	white-space: normal;
 }
 
 .tablewrapper tbody {
